--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar border navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <!-- <a class="navbar-brand" href="#">Navbar</a> -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -21,9 +21,11 @@
                             <div class="row">
                                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
                                     <a class="dropdown-item deplegar">Misión</a>
+                                    <a class="dropdown-item" href="#">Primera Comunión</a>
                                     <a class="dropdown-item" href="#">Confirmación</a>
                                     <a class="dropdown-item" href="#">Catecumenado</a>
                                     <a class="dropdown-item" href="#">Familia / Matrimonio</a>
+                                    <a class="dropdown-item" href="#">Pastoral Biblica</a>
                                     <a class="dropdown-item" href="#">Pastoral educativa</a>
                                 </div>
                                 <div class="col-lg-6 col-md-12 col-sm-12 col-12">
@@ -65,6 +67,12 @@
                             <li><a class="dropdown-item" href="#">Educación</a></li>
                             <li><a class="dropdown-item" href="#">Empleo</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Cencovi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">3Panes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Avisos parroquiales</a>
