--- a/src/app/pages/templo-parroquial/templo-parroquial.component.html
+++ b/src/app/pages/templo-parroquial/templo-parroquial.component.html
@@ -2,32 +2,38 @@
     <div class="row my-2">
 
         <div class="col-md-12">
-            <h1 class="rochester text-center"> <i class="fas fa-church"></i> Templo parroquial
+            <h1 class="rochester text-center"> <i class="fas fa-church"></i> {{ dataTemploParroquial.title.rendered }}
                 <i class="fas fa-cross"></i></h1>
         </div>
         <div class="col-md-3">
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error molestias itaque accusantium. Perferendis mollitia nemo voluptas ea. Consequuntur quaerat, quibusdam eligendi sapiente quia aliquam at molestiae id, vel rerum fugit!</p>
+            <span [innerHTML]="dataTemploParroquial.content.rendered"></span>
         </div>
         <div class="col-md-9">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
-                        <a href="./assets/templo-parroquial/altar.png" data-lightbox="altar" data-title="altar"><img class="img-fluid sombreado my-3 rounded" src="./assets/templo-parroquial/altar.png" alt="altar"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_1">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_1:''" data-lightbox="altar" data-title="altar"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_1:''" alt="altar"></a>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                        <a href="./assets/templo-parroquial/parroquia-estructura.jpg" data-lightbox="estructura" data-title="Estructura Parroquia"><img class="img-fluid sombreado my-3 rounded" src="./assets/templo-parroquial/parroquia-estructura.jpg" alt="estructura"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_2">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_2:''" data-lightbox="estructura" data-title="Estructura Parroquia"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_2:''" alt="estructura"></a>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                        <a href="./assets/templo-parroquial/parroquia.png" data-lightbox="parroquia" data-title="Parroquia"><img class="img-fluid sombreado my-3 rounded" src="./assets/templo-parroquial/parroquia.png" alt="Parroquia"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_3">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_3:''" data-lightbox="parroquia" data-title="Parroquia"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_3:''" alt="Parroquia"></a>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                        <a href="./assets/templo-parroquial/misa.jpg" data-lightbox="misa" data-title="Misa"><img class="img-fluid sombreado my-3 rounded" src="./assets/templo-parroquial/misa.jpg" alt="Misa"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_4">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_4:''" data-lightbox="misa" data-title="Misa"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_4:''" alt="Misa"></a>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                        <a href="./assets/templo-parroquial/dron.jpg" data-lightbox="dron" data-title="dron"><img class="img-fluid sombreado my-3 rounded" src="./assets/templo-parroquial/dron.jpg" alt="dron"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_5">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_5:''" data-lightbox="dron" data-title="dron"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_5:''" alt="dron"></a>
                     </div>
-                    <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                        <a href="./assets/templo-parroquial/dron2.jpg" data-lightbox="dron2" data-title="dron"><img class="img-fluid sombreado my-3 rounded" src="./assets/templo-parroquial/dron2.jpg" alt="dron"></a>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_6">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_6:''" data-lightbox="dron2" data-title="dron"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_6:''" alt="dron"></a>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_7">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_7:''" data-lightbox="dron2" data-title="dron"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_7:''" alt="dron"></a>
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-6 col-lg-3" *ngIf="dataTemploParroquial.acf.imagen_8">
+                        <a [href]="dataTemploParroquial?dataTemploParroquial.acf.imagen_8:''" data-lightbox="dron2" data-title="dron"><img class="img-fluid sombreado my-3 rounded" [src]="dataTemploParroquial?dataTemploParroquial.acf.imagen_8:''" alt="dron"></a>
                     </div>
                 </div>
             </div>
