--- a/src/app/pages/pastoral-biblica/pastoral-biblica.component.html
+++ b/src/app/pages/pastoral-biblica/pastoral-biblica.component.html
@@ -2,7 +2,7 @@
     <div class="row my-3">
         <div class="col-md-12">
             <h1 class="rochester m-3 text-center"><i class="fas fa-church"></i> {{this.wpPastBiblica.title.rendered}}
-                <i class="fas fa-cross"></i></h1>
+                <i class="fas fa-bible"></i></h1>
         </div>
         <div class="col-md-4 d-grid gap-2">
             <button type="button" (click)="cambiarTexto(1)" id="1" class="btn btn-outline-info active letra-negra">{{this.wpPastBiblica.acf.Item_1.titulo_item}}</button>
