--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,10 +20,9 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 
                             <a class="dropdown-item deplegar" [routerLink]="['mision']" routerLinkActive="active">Misión</a>
-                            <a class="dropdown-item" [routerLink]="['bautizo']" routerLinkActive="active">Bautismo</a>
+                            <a class="dropdown-item" [routerLink]="['bautizo']" routerLinkActive="active">Bautismo / Catecumenado</a>
                             <a class="dropdown-item" [routerLink]="['primera-comunion']" routerLinkActive="active">Primera Comunión</a>
                             <a class="dropdown-item" [routerLink]="['confirmacion']" routerLinkActive="active">Confirmación</a>
-                            <a class="dropdown-item" [routerLink]="['catecumenado']" routerLinkActive="active">Catecumenado</a>
                             <a class="dropdown-item" [routerLink]="['familia-matrimonio']" routerLinkActive="active">Familia / Matrimonio</a>
                             <a class="dropdown-item" [routerLink]="['pastoral-biblica']" routerLinkActive="active">Pastoral Biblica</a>
                             <a class="dropdown-item" [routerLink]="['pastoral-educativa']" routerLinkActive="active">Pastoral educativa</a>
