--- a/src/app/pages/avisos/avisos.component.html
+++ b/src/app/pages/avisos/avisos.component.html
@@ -1,5 +1,13 @@
 <div class="container">
-    <div class="row">
-
+    <div class="row m-2">
+        <div class="col-md-3">
+            <div class="card border-info mb-3" style="width: 18rem;">
+                <h5 class="card-header bg-info">IMPORTANTE</h5>
+                <img src="assets/aviso-parroquial.jpg" class="card-img-top" alt="aviso">
+                <div class="card-body bg-info">
+                    <h5 class="card-title ">PROGRAMA JOVENES RESILIENTES</h5>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
